--- a/index.html
+++ b/index.html
@@ -4,5 +4,21 @@
 		<title> My Datastory </title>
 		<link href="assets/css/style.css" type="text/css" rel="stylesheet" />
 	</head>
+	<article>
+	<header>
+		<h1> My Datastory </h1>
+	</header>
+	<article>
 	
+	<section>
+		<div class="container">
+			<img src="assets/img/cloninger-dataviz-reddit.png" alt="Data visualization of my reddit experiment" >
+		</div>
+	</section>
+
+	<section>
+		<h2> The YouTube Algorithm </h2>
+	</section>
+	
+	</article>
 </html>
