--- a/index.html
+++ b/index.html
@@ -3,21 +3,38 @@
 	<head>	
 		<title> My Datastory </title>
 		<link href="assets/css/style.css" type="text/css" rel="stylesheet" />
+		<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/clear-sans" type="text/css"/>
+		<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/vremena" type="text/css"/>
 	</head>
 	<article>
 	<header>
 		<h1> My Datastory </h1>
+		<p> This is a preview of my website </p>
 	</header>
 	<article>
 	
-	<section>
-		<div class="container">
-			<img src="assets/img/cloninger-dataviz-reddit.png" alt="Data visualization of my reddit experiment" >
-		</div>
+	<section id="intro">
+		
+	</section>
+		
+	<section id="reddit">
+		<h2> My Experiences Using Reddit </h2>
+		<p id="left-text"> Reddit is a huge part of who I am. Every morning I wake up and browse the different categories of subreddits. </p>
+		<a href="assets/img/cloninger-dataviz-reddit.png" target="_blank"> 
+			<div class="img-container">
+				<img src="assets/img/cloninger-dataviz-reddit.png" alt="Data visualitzation of my reddit experiment" > 
+				<p> Click to view larger image </p>
+			</div>
+		</a>
+		
 	</section>
 
-	<section>
+	<section id="youtube">
 		<h2> The YouTube Algorithm </h2>
+		<div class="vid-container">
+			<iframe height="315" src="https://www.youtube.com/embed/XxbSJk_OHVY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		</div>
+		<p> I spend a lot on my free time on YouTube </p>
 	</section>
 	
 	</article>
