working-reddit-grid

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 	<article>
 	<header>
 		<h1> My Datastory </h1>
-		<p> My Datastory is a website that I designed to compile my findings about digital media that I use everyday. This site contains 
-			two data visualization projects on both the Reddit and YouTube social media platforms.
-			<br><br>
-			Both Reddit and YouTube allowed me to explore why users might click on posts and videos that they find on the web.  </p>
 	</header>
+	
 	<article>
 	
 	<section id="intro">
-		
+		<p> I designed this website to compile my findings on the Reddit and YouTube digital media platforms. This site contains 
+			two data visualization projects that I did in Spring 2018.
+			<br><br>
+			Both Reddit and YouTube allowed me to explore why users might click on posts and videos that they find on the web.  </p>
 	</section>
 		
 	<section id="reddit">
@@ -27,28 +27,35 @@
 			<br><br>
 			After recording a number of variables, I finally settled on using the relational chart type to represent my findings, because it  
 			allowed me to draw connections about what similarities existed between both my finished and unfinished Reddit posts. I saw one 
-			pattern in how some of my finished and unfinished Reddit posts only consisted of short-length posts. Another pattern that I 
-			picked up on was the same desire to either finish or abandon reading a Reddit post between those already identified similar posts. 
+			pattern in how some of my finished and unfinished Reddit posts only consisted of short-length posts. 
+			<br><br>Another pattern that I picked up on was the same desire to either finish or abandon reading a Reddit post between those 
+			already identified similar posts. 
+			<br><br>
 			By going back and looking at my data, I recognized a final pattern where the action and entertain themed finished posts had the 
 			same ratings for their medium-length and long-length posts, because the words that I perceived be of most interest in the title 
 			could have belonged in either the action or entertain themes; these two themes seemed to have some overlap that I did not foresee 
 			beforehand. 
 			<br><br>
-			The marks and attributes that I used further demonstrate these relationships. I chose to use curved arrow-shapes to demonstrate 
-			the similarities, because each side of the arrow points out that the similarity applies to each object equally. I used 
-			triangles to represent finished Reddit posts, while using squares to represent unfinished Reddit posts; these shapes were decided 
-			on because they are easy to distinguish from each other and add contrast to the chart. I used the dashed lines to represent the 
-			different lengths of the Reddit posts; the dashed lines were designed to be straight, diagonal lines to show off their stand-alone 
-			qualities so that they wouldn’t be mistaken for the similarity arrows. I used circles to represent each Reddit post, because the 
-			curved shape allows them to not be confused with the triangles and squares that I paired them with; circles can also fit inside 
-			both the triangle and square shapes, so it also works to symbolize that the Reddit posts belong within either the finished or 
-			unfinished Reddit post categories.
+			The marks and attributes that I used further demonstrate these relationships. 
+			<br><br> 
+			I chose to use curved arrow-shapes to demonstrate the similarities, because each side of the arrow points out that the 
+			similarity applies to each object equally. I used triangles to represent finished Reddit posts, while using squares to represent 
+			unfinished Reddit posts; these shapes were decided on because they are easy to distinguish from each other and add contrast to the chart. 
+			<br><br> 
+			I used the dashed lines to represent the different lengths of the Reddit posts; the dashed lines were designed to be straight, 
+			diagonal lines to show off their stand-alone qualities so that they wouldn’t be mistaken for the similarity arrows. 
+			<br><br>
+			I used circles to 
+			represent each Reddit post, because the curved shape allows them to not be confused with the triangles and squares that I paired them 
+			with; circles can also fit inside both the triangle and square shapes, so it also works to symbolize that the Reddit posts belong 
+			within either the finished or unfinished Reddit post categories.
+			<br><br>
 		</p>
 		<a href="assets/img/cloninger-dataviz-reddit.png" target="_blank"> 
 			<div class="img-container">
-				<br><br><br>
+				<br><br>
 				<img src="assets/img/cloninger-dataviz-reddit.png" alt="Data visualitzation of my reddit experiment" > 
-				<p> Click to view larger image </p>
+				<p id="caption"> Click to view larger image </p>
 			</div>
 		</a>
 		
@@ -59,7 +66,7 @@
 		<div class="vid-container">
 			<iframe height="315" src="https://www.youtube.com/embed/XxbSJk_OHVY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
-		<p> I spend a lot of my freetime on YouTube.
+		<p> I spend a lot of my freetime on YouTube. But, I found myself wondering just how YouTube knows what videos to recommend to its users.
 		</p>
 	</section>
 	
