grid-minmax-fixes

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		<div class="vid-container">
 			<iframe height="315" src="https://www.youtube.com/embed/XxbSJk_OHVY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
-		<p> I spend a lot of my freetime on YouTube. But, I found myself wondering just how YouTube knows what videos to recommend to its users.
+		<p> I spend a lot of my freetime on YouTube. But, I wondered how YouTube knows what videos to recommend to its users.
 		</p>
 	</section>
 	
