--- a/index.html
+++ b/index.html
@@ -17,38 +17,25 @@
 		<p> I designed this website to compile my findings on the Reddit and YouTube digital media platforms. This site contains 
 			two data visualization projects that I did in Spring 2018.
 			<br><br>
-			Both Reddit and YouTube allowed me to explore why users might click on posts and videos that they find on the web.  </p>
+			Both Reddit and YouTube allowed me to explore why users might click on the posts and videos that they find on the web.  </p>
 	</section>
 		
 	<section id="reddit">
 		<h2> My Experiences Using Reddit </h2>
 		<p id="left-text"> Reddit is a huge part of who I am. Everyday, I browse the different categories of subreddits. Then I got the idea 
-			that I should investigate what prompts me to click on a Reddit post in the first place.
+			to investigate what prompts me to click on a Reddit post in the first place.
 			<br><br>
-			After recording a number of variables, I finally settled on using the relational chart type to represent my findings, because it  
-			allowed me to draw connections about what similarities existed between both my finished and unfinished Reddit posts. I saw one 
-			pattern in how some of my finished and unfinished Reddit posts only consisted of short-length posts. 
-			<br><br>Another pattern that I picked up on was the same desire to either finish or abandon reading a Reddit post between those 
-			already identified similar posts. 
+			I set up a table where I recorded a number of variables, such as my rating of a post, whether I finished it or not, and what was 
+			the theme did the post belong in. After recording my Reddit habits, I started looking at my collected data.
 			<br><br>
-			By going back and looking at my data, I recognized a final pattern where the action and entertain themed finished posts had the 
-			same ratings for their medium-length and long-length posts, because the words that I perceived be of most interest in the title 
-			could have belonged in either the action or entertain themes; these two themes seemed to have some overlap that I did not foresee 
-			beforehand. 
+			From studying the data, I began to notice patterns in how I chose the Reddit posts that I viewed. I observed that there were 
+			similarities in both my finished and unfinished Reddit posts. I also noticed that I preferred to read shorter Reddit posts the most.
+			It was also visible that I usually had the same desire to finish or abandon reading a Reddit post I had identified some existing 
+			connection that they had to other similar posts.
 			<br><br>
-			The marks and attributes that I used further demonstrate these relationships. 
-			<br><br> 
-			I chose to use curved arrow-shapes to demonstrate the similarities, because each side of the arrow points out that the 
-			similarity applies to each object equally. I used triangles to represent finished Reddit posts, while using squares to represent 
-			unfinished Reddit posts; these shapes were decided on because they are easy to distinguish from each other and add contrast to the chart. 
-			<br><br> 
-			I used the dashed lines to represent the different lengths of the Reddit posts; the dashed lines were designed to be straight, 
-			diagonal lines to show off their stand-alone qualities so that they wouldn’t be mistaken for the similarity arrows. 
-			<br><br>
-			I used circles to 
-			represent each Reddit post, because the curved shape allows them to not be confused with the triangles and squares that I paired them 
-			with; circles can also fit inside both the triangle and square shapes, so it also works to symbolize that the Reddit posts belong 
-			within either the finished or unfinished Reddit post categories.
+			When it came time to create a data visualization for my data, I chose the relational chart because it allowed me to the ease to 
+			represent similarities and other connections. By recording my Reddit habits, I feel that I better understand why I enjoy spending 
+			so much time on the site. 
 			<br><br>
 		</p>
 		<a href="assets/img/cloninger-dataviz-reddit.png" target="_blank"> 
@@ -66,7 +53,15 @@
 		<div class="vid-container">
 			<iframe height="315" src="https://www.youtube.com/embed/XxbSJk_OHVY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
-		<p> I spend a lot of my freetime on YouTube. But, I wondered how YouTube knows what videos to recommend to its users.
+		<p> I spend a lot of my freetime on YouTube. But, I wondered how YouTube knew what videos to recommend to its users.
+			<br><br>
+			This is when I decided to do some research. YouTube basically uses at two algorithms, which are both called the YouTube Algorithm. By having the 
+			flexibility of implementing two algorithms, YouTube is able to recommend content for its two very different audiences: registered users who have 
+			YouTube accounts and unregistered users.
+			<br><br>
+			YouTube is able to use unregistered users' watch history to recommend their content. Whereas, YouTube is able to use registered YouTube users' 
+			interactivity, such as liking and favoriting videos, to inform them of the content that they like to watch.
+			<br><br>
 		</p>
 	</section>
 	
